@@ -51,11 +51,11 @@ MIN_UNSTATIC_LEVEL = 8
 # a bit easier for the mage, especially in the beginning.
 MAGE_HITPOINT_BONUS = true
 
-# Option : prevent first level people from droping items or gold. This
-# option maybe annoying to first level characters, but will hopefully
-# discourage people from writing scripts to bring in characters, drop
-# their stuff, suicide them, etc, as a way of accumulating funds.
-NEWBIES_CANNOT_DROP = true
+# Option : prevent low level people (under this value) from droping items
+# or gold. This option maybe annoying to low level characters, but will
+# hopefully discourage people from writing scripts to bring in characters,
+# drop their stuff, suicide them, etc, as a way of accumulating funds.
+NEWBIES_CANNOT_DROP = 5
 
 # Option: This allows you to make it so that the lvl stays static until
 # the random unstaticer makes it unstatic on player death.
