@@ -184,7 +184,7 @@ char * cfg_dungeon_master = "DungeonMaster";
 bool cfg_secret_dungeon_master = 0;
 s16b cfg_fps = 12;
 bool cfg_mage_hp_bonus = 1;
-bool cfg_newbies_cannot_drop = 0;
+s16b cfg_newbies_cannot_drop = 5;
 bool cfg_door_bump_open = 1;
 s32b cfg_preserve_death_level = 201;
 bool cfg_no_ghost = 0;
